--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>Enjoy with Backmusic</h1>
+<p><%= link_to "新規会員登録はこちら", new_user_registration_path %></p>
+<p><%= link_to "ログインはこちら", new_user_session_path %></p>
