--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,6 @@
-<h1>Enjoy with Backmusic</h1>
-<p><%= link_to "新規会員登録はこちら", new_user_registration_path %></p>
-<p><%= link_to "ログインはこちら", new_user_session_path %></p>
+<% if user_signed_in? %>
+  <h1>ログイン後</h1>
+  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+<% else %>
+  <%= render 'static_pages/before_login' %>
+<% end %>
