--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
       <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
         <div class="field">
-          <%= f.label :name %><br />
+          <%= f.label :name %>
           <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
         </div>
         <div class="field">
@@ -15,7 +15,7 @@
         <div class="field">
           <%= f.label :password %>
           <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> 文字以上)</em>
+            <em>(<%= @minimum_password_length %> 文字以上)</em>
           <% end %>
           <%= f.password_field :password, autocomplete: "new-password" %>
         </div>
