--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -6,4 +6,5 @@
   <%= csrf_meta_tags %>
   <!-- PLUGINS CSS STYLE -->
   <%= stylesheet_link_tag "application", :media => "all" %>
+  <script src="https://kit.fontawesome.com/b5024f8d25.js" crossorigin="anonymous"></script>
 </head>
