--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>EnjoyBackmusic</title>
   <%= csrf_meta_tags %>
+  <%= javascript_include_tag 'application' %>
   <!-- PLUGINS CSS STYLE -->
   <%= stylesheet_link_tag "application", :media => "all" %>
   <script src="https://kit.fontawesome.com/b5024f8d25.js" crossorigin="anonymous"></script>
