--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,5 @@
+
+
 <div class="container">
   <% if user_signed_in? %>
     <h1>ログイン後</h1>
@@ -8,12 +10,9 @@
         <% musicpost.taxons.each do |taxon| %>
           <%= taxon.name %>
         <% end %>
-          <%= button_to '再生', '/play', { method: :get, remote: true, params: { id: musicpost.id } } %>
+          <%= button_to '再生', '/play', { method: :get, remote: true, params: { select_musicpost_id: musicpost.id } } %>
       </div>
     <% end %>
-    <div id="play">
-      <%= render 'shared/play' %>
-    </div>
   <% else %>
     <%= render 'static_pages/before_login' %>
   <% end %>
