--- a/app/views/static_pages/play.js.erb
+++ b/app/views/static_pages/play.js.erb
@@ -1,5 +1,1 @@
-$('#play').html('<%=j render partial: "shared/play", collections: @select_musicpost %>');
-
-audiojs.events.ready(function() {
-  var as = audiojs.createAll();
-});
+$('footer').html('<%=j render partial: "layouts/footer", collections: @select_musicpost %>');
