--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,17 +1,12 @@
 <div class="container">
-  <% if user_signed_in? %>
-    <h1>ログイン後</h1>
-    <% @musicposts.each_with_index do |musicpost, index| %>
-      <div class="musicpost">
-        <%= musicpost.user.name %>
-        <%= musicpost.title %>
-        <% musicpost.taxons.each do |taxon| %>
-          <%= taxon.name %>
-        <% end %>
-          <%= button_to '再生', '/play', { method: :get, remote: true, params: { select_musicpost_id: musicpost.id } } %>
-      </div>
-    <% end %>
-  <% else %>
-    <%= render 'static_pages/before_login' %>
+  <% @musicposts.each_with_index do |musicpost, index| %>
+    <div class="musicpost">
+      <%= musicpost.user.name %>
+      <%= musicpost.title %>
+      <% musicpost.taxons.each do |taxon| %>
+        <%= taxon.name %>
+      <% end %>
+        <%= button_to '再生', '/play', { method: :get, remote: true, params: { select_musicpost_id: musicpost.id }, class: "select_musicpost_button" } %>
+    </div>
   <% end %>
 </div>
