--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,11 @@
 <footer>
   <div class="container">
     <div class ="player">
-      <%= audio_tag(url_for(select_musicpost.audio), autoplay: true) if select_musicpost %>
-      <%= select_musicpost.title if select_musicpost %>
+      <audio preload="auto"></audio>
+      <div class="music_information">
+        <div class="title"></div>
+        <div class="upload_user"></div>
+      </div>
     </div>
   </div>
 </footer>
