--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,6 @@
     <main>
       <%= yield %>
     </main>
-    <%= render 'layouts/footer', select_musicpost: @select_musicpost %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
