--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,17 @@
       <% musicpost.taxons.each do |taxon| %>
         <%= taxon.name %>
       <% end %>
-        <%= button_to '再生', '/play', { method: :get, remote: true, params: { select_musicpost_id: musicpost.id }, class: "select_musicpost_button" } %>
+      <div class=play_pause_button>
+        <button class="select_musicpost_play">
+          再生
+          <input class="src" type="hidden", value="<%= url_for(musicpost.audio) %>">
+          <input class="title" type="hidden", value="<%= musicpost.title %>">
+          <input class="upload_user" type="hidden", value="<%= musicpost.user.name %>">
+        </button>
+        <button class="select_musicpost_pause">
+          一時停止
+        </button>
+      </div>
     </div>
   <% end %>
 </div>
