--- a/app/views/upload_musicposts/new.html.erb
+++ b/app/views/upload_musicposts/new.html.erb
@@ -2,8 +2,9 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <h1>アップロード</h1>
+      <%= @upload.composer %>
       <p>あなたの演奏を配信しましょう</p>
-      <%= form_with(model: @upload_musicpost_form, url: upload_musicposts_path, local: true) do |f| %>
+      <%= form_with model: @upload_musicpost, url: upload_musicposts_path, local: true do |f| %>
         <div class="error_messages">
           <% if @upload.errors.any? %>
             <p><%= @upload.errors.count %>つのエラーがあります。</p>
@@ -19,8 +20,8 @@
           <%= f.file_field :audio,  accept: "audio/*" %>
         </div>
         <div class="field require">
-          <%= f.label :title%>
-          <%= f.text_field :title %>
+          <%= f.label :title %>
+          <%= f.text_field :title, autocomplete: "title" %>
         </div>
         <div class="field">
           <%= f.label :composer %>
