--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,20 +1,3 @@
 <div class="container">
-  <div class="musicpost_index">
-    <% @musicposts.each_with_index do |musicpost, index| %>
-      <div class="row  musicpost">
-        <div class="col-md-3 musicpost_information">
-          <p class="title"><%= musicpost.title %></p>
-          <p class="name">投稿者：<%= musicpost.user.name %></p>
-          <p class="taxon">
-            <% musicpost.taxons.each do |taxon| %>
-              <%= taxon.name %>
-            <% end %>
-          </p>
-        </div>
-        <div class="col-md-6">
-          <%= render 'shared/play_pause', musicpost: musicpost %>
-        </div>
-      </div>
-    <% end %>
-  </div>
+  <%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: false %>
 </div>
