--- a/app/views/upload_musicposts/new.html.erb
+++ b/app/views/upload_musicposts/new.html.erb
@@ -21,7 +21,7 @@
         </div>
         <div class="field require">
           <%= f.label :title %>
-          <%= f.text_field :title, autocomplete: "title" %>
+          <%= f.text_field :title %>
         </div>
         <div class="field">
           <%= f.label :composer %>
