--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
               <%= current_user.name %> <i class="fas fa-angle-down"></i>
             <% end %>
             <ul class="dropdown-menu">
-              <li><%= link_to "Profile", '' %></li>
+              <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Likes", '' %></li>
               <li><%= link_to "Who to follow", '' %></li>
             </ul>
