--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,43 +1,19 @@
 <div class="container">
-  <div class="user_information">
-    <h2><%= @user.name %></h2>
-    <% if @user == current_user %>
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#user_edit">
-        ユーザー情報編集
-      </button>
-    <% end %>
-  </div>
-  <%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: true %>
-</div>
-
-<div class="modal fade" id="user_edit" tabindex="-1" role="dialog" aria-labelledby="user_edit_title" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
+  <div class="row user_information">
+    <div class="col-md-4">
+      <h2><%= @user.name %></h2>
+      <h5><%= @user.self_introduction %></h5>
+    </div>
+    <div class="col-md-4">
+      <% if @user == current_user %>
+        <button type="button" class="user_edit_btn btn btn-primary" data-toggle="modal" data-target="#user_edit">
+          ユーザー情報編集
         </button>
-        <h3 class="modal-title" id="user_edit_title">ユーザー情報編集</h3>
-      </div>
-      <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
-        <div class="modal-body">
-          <div class="field">
-            <%= f.label :name %>
-            <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-          </div>
-          <div class="field">
-            <%= f.label :email %>
-            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-          </div>
-
+        <div class="user_edit_modal">
+          <%= render 'user_edit', resource: @user %>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">キャンセル</button>
-          <div class="actions">
-            <%= f.submit "変更する" %>
-          </div>
-        </div>
-      <% end %>  
+      <% end %>
     </div>
   </div>
+  <%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: true %>
 </div>
