--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,6 +34,7 @@
             <% end %>
             <ul class="dropdown-menu">
               <li><%= link_to "About us", '' %></li>
+              <li><%= link_to "Settings", settings_path %></li>
               <li><%= link_to "Signout", destroy_user_session_path, method: :delete %></li>
             </ul>              
           </li>
