containerをapplication.html.erbに記載

--- a/app/views/static_pages/settings.html.erb
+++ b/app/views/static_pages/settings.html.erb
@@ -11,6 +11,6 @@
     </div>
   </div>
   <h5>パスワード</h5>
-  <%= link_to '変更する', edit_user_password_path %>
+  <%= link_to '変更する', edit_user_registration_password_path %>
   <h5><%= link_to 'アカウントの削除', '/users', method: :delete, data: { confirm: 'アカウントを削除します。本当によろしいですか？' } %></h5>
 </div>
