--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
     <%= render 'layouts/header' %>
     <main>
       <div class="container">
+        <% flash.each do |key, value| %>
+          <div class="alert alert-<%= bootstrap_alert(key) %>"><%= value %></div>
+        <% end %>      
         <%= yield %>
       </div>
     </main>
