--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -104,6 +104,21 @@ input[type="submit"]{
   }
 }
 
+.change_email{
+  form{
+    display: flex;
+    margin-bottom: 15px;
+    #change_email{
+      width: 300px;
+      margin: 0 30px 0 0;
+    }
+    input[type="submit"]{
+      width: 100px;
+      margin: 0;
+    }    
+  }
+}
+
 /*=== 4.PLAYER ===*/
 footer{
   position: absolute;
