フォロー機能の実装

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,8 @@
     <h2><%= @user.name %></h2>
     <h5><%= @user.self_introduction %></h5>
   </div>
+</div>
+<div class="row link">
   <div class="col-md-4">
     <% if @user == current_user %>
       <button type="button" class="user_edit_btn btn btn-primary" data-toggle="modal" data-target="#user_edit">
@@ -11,7 +13,16 @@
       <div class="user_edit_modal">
         <%= render 'user_edit', resource: @user %>
       </div>
+    <% else %>
+      <%= render 'users/follow_form', user: @user %>
     <% end %>
   </div>
 </div>
-<%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: true %>
+<div class="row user_main">
+  <div class="col-md-8">
+    <%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: true %>
+  </div>
+  <div class="col-md-4">
+    <%= render 'shared/stats', user: @user %>
+  </div>
+</div>
