--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,14 @@
-<div class="row user_information">
-  <div class="col-md-4">
+<div class="row">
+  <div class="col-md-12 user_information">
     <%= image_tag(@user.display_avatar) %>
-    <h2><%= @user.name %></h2>
-    <h5><%= @user.self_introduction %></h5>
+    <div class="user_text">
+      <h2><%= @user.name %></h2>
+      <h5><%= @user.self_introduction %></h5>
+    </div>
   </div>
 </div>
-<div class="row link">
-  <div class="col-md-4">
+<div class="row">
+  <div class="col-md-12 link">
     <% if @user == current_user %>
       <button type="button" class="user_edit_btn btn btn-primary" data-toggle="modal" data-target="#user_edit">
         ユーザー情報編集
