--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -1,22 +1,2 @@
-<div class="row">
-  <div class="col-md-12">
-    <%= @user.name %>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <ul>
-      <li>Likes</li>
-      <li><%= link_to "Following", following_user_path %></li>
-      <li><%= link_to "Followers", followers_user_path %></li>
-      <li>Comments</li>
-    </ul>
-  </div>
-</div>
-<div class="row">
-  <% @users.each do |user| %>
-    <div class="col-md-2">
-      <%= user.name %>
-    </div>
-  <% end %>
-</div>
+<%= render 'layouts/user_tab', user: @user %>
+<%= render 'layouts/user_relationship', users: @users %>
