--- a/app/views/layouts/_user_relationship.html.erb
+++ b/app/views/layouts/_user_relationship.html.erb
@@ -5,6 +5,9 @@
         <%= image_tag(user.display_avatar) %>
         <p><%= user.name %></p>
       <% end %>
+      <% unless user == current_user %>
+        <%= render 'users/follow_form', user: user %>
+      <% end %>
     </div>
   <% end %>
 </div>
