favorite機能の実装

--- a/app/views/shared/_musicposts_index.html.erb
+++ b/app/views/shared/_musicposts_index.html.erb
@@ -12,8 +12,13 @@
           <% end %>
         </p>
       </div>
-      <div class="col-md-3">
-        <%= render 'shared/play_pause', musicpost: musicpost %>
+      <div class="col-md-3 musicpost_button">
+        <ul>
+          <li><%= render 'shared/play_pause', musicpost: musicpost %></li>
+          <% if user_signed_in? %>
+            <li><%= render 'musicposts/favorite_form', musicpost: musicpost %></li>
+          <% end %>
+        </ul>
       </div>
     </div>
   <% end %>
