--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -31,7 +31,14 @@ a{
     color: #797979;
   }
 }
-
+button{
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  appearance: none;
+}
 .btn{
   margin: 15px;
 }
@@ -216,15 +223,24 @@ footer{
       color: #777777;
     }
   }
-}
-.select_musicpost_pause{
-  display: none;
-}
-.play_pause_button{
-  color: #7B449A;
-  font-size: 40px;
-  cursor: pointer;
-  align-content: flex-end;
+  .musicpost_button{
+    ul{
+      display: flex;
+      font-size: 40px;
+      color: #7B449A;
+      cursor: pointer;
+      list-style: none;
+      li{
+        margin-right: 10px;
+        .select_musicpost_pause{
+          display: none;
+        }
+        .unfavorite{
+          color: #CCCCCC;
+        }
+      }
+    }
+  }
 }
 
 /*=== 6.modal ===*/
