--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Favorites#index</h1>
-<p>Find me in app/views/favorites/index.html.erb</p>
+<%= render 'layouts/library_tab' %>
+<%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: false %>
