--- a/app/views/layouts/_user_tab.html.erb
+++ b/app/views/layouts/_user_tab.html.erb
@@ -5,7 +5,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-12 user_tab">
+  <div class="col-md-12 user_tab tab">
     <ul>
       <li class="likes_list">Likes</li>
       <li class="following_list"><%= link_to "Following", following_user_path %></li>
