--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <ul class = "nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li><%= link_to "Home", root_url %></li>
-          <li><%= link_to "Library", '' %></li>
+          <li><%= link_to "Library", favorites_path %></li>
           <li><input class="form-control" type="search" placeholder="Search" aria-label="Search"></li>
           <li><%= link_to "Upload", new_upload_musicpost_path %></li>
           <li class="dropdown" >
@@ -14,8 +14,8 @@
             <% end %>
             <ul class="dropdown-menu">
               <li><%= link_to "Profile", current_user %></li>
-              <li><%= link_to "Likes", '' %></li>
-              <li><%= link_to "Who to follow", '' %></li>
+              <li><%= link_to "favorite", favorites_path %></li>
+              <li><%= link_to "following", '' %></li>
             </ul>
           </li>
           <li>
@@ -36,7 +36,7 @@
               <li><%= link_to "About us", '' %></li>
               <li><%= link_to "Settings", settings_path %></li>
               <li><%= link_to "Signout", destroy_user_session_path, method: :delete %></li>
-            </ul>              
+            </ul>
           </li>
         <% else %>
           <li><%= link_to "新規登録", new_user_registration_path %></li>
