--- a/app/views/layouts/_user_relationship.html.erb
+++ b/app/views/layouts/_user_relationship.html.erb
@@ -2,7 +2,7 @@
   <% users.each do |user| %>
     <div class="col-md-2 user_relationship">
       <%= link_to user_path(user) do %>
-        <%= image_tag(user.display_avatar) %>
+        <%= image_tag(user.display_avatar, class:"img_avatar") %>
         <p><%= user.name %></p>
       <% end %>
       <% unless user == current_user %>
