--- a/app/views/layouts/_user_tab.html.erb
+++ b/app/views/layouts/_user_tab.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12 user_information">
-    <%= image_tag(user.display_avatar) %>
+    <%= image_tag(user.display_avatar, class:"img_avatar") %>
     <h2><%= user.name %></h2>
   </div>
 </div>
