--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12 user_information">
-    <%= image_tag(@user.display_avatar) %>
+    <%= image_tag(@user.display_avatar, class:"img_avatar") %>
     <div class="user_text">
       <h2><%= @user.name %></h2>
       <h5><%= @user.self_introduction %></h5>
