--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -387,3 +387,33 @@ footer{
     margin-bottom: 10px;
   }
 }
+
+/*=== 10.comments_index ===*/
+.comment_create{
+  form{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    textarea{
+      width: 80%;
+    }
+    .btn{
+      margin: 0 0 15px 15px;
+    }
+  }
+}
+.comment{
+  margin-bottom: 5px;
+  padding: 10px;
+  height: 80px;
+  .img_avatar{
+    height: 70px
+  }
+  .comment_header{
+    color: #9C9C9C;
+    font-size: 12px;
+    a{
+      color: #9C9C9C;
+    }
+  }
+}
