--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,7 +29,7 @@
             <% end %>
           </li>
           <li>
-            <%= link_to '', { class: "dropdown-toggle", 'data-toggle': "dropdown" } do %>
+            <%= link_to '', { class: "dropdown-toggle", 'data-toggle': "dropdown", id: "header_other" } do %>
               <i class="fas fa-ellipsis-h fa-lg"></i>
             <% end %>
             <ul class="dropdown-menu">
