--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -1,4 +1,3 @@
-@import "bootstrap-sprockets";
 @import "bootstrap";
 
 body {
@@ -16,7 +15,7 @@ main{
   .container{
     background-color: white;
     min-height: calc(100vh - 50px);
-    padding: 20px;
+    padding: 20px 20px 50px;
   }
 }
 
@@ -74,18 +73,27 @@ button{
 
 /*=== 2.HEADER ===*/
 header{
-  display: flex;
   font-weight: 700;
-  #logo {
-    padding: 0 20px;
-    background-color: white;
-  }
-  img{
-    width: 50px;
-  }
-  input{
-    margin-top: 7px;
-    margin-bottom: 0;
+  .navbar{
+    padding: 0;
+    .container{
+      padding: 0;
+      #logo {
+        padding: 0 20px;
+        background-color: white;
+      }
+      img{
+        width: 50px;
+      }
+      input{
+        margin: 0 8px;
+      }
+      ul{
+        li{
+          margin-right: 5px;
+        }
+      }
+    }
   }
 }
 
@@ -239,6 +247,9 @@ footer{
       margin-right: 10px;
       .select_musicpost_pause{
         display: none;
+      }
+      .favorite{
+        color: #7B449A;
       }
       .unfavorite{
         color: #CCCCCC;
@@ -418,7 +429,7 @@ footer{
       li{
         padding-right: 10px;
       }
-      a{
+      a, i{
         color: #9C9C9C;
       }
     }
