--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,8 @@
   <div class="col-md-12 user_information">
     <%= image_tag(@user.display_avatar, class:"img_avatar") %>
     <div class="user_text">
-      <h2><%= @user.name %></h2>
-      <h5><%= @user.self_introduction %></h5>
+      <h3><%= @user.name %></h3>
+      <p><%= @user.self_introduction %></p>
     </div>
   </div>
 </div>
