--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -435,3 +435,18 @@ footer{
     }
   }
 }
+
+/*=== 11.memo ===*/
+.memo_field{
+  textarea{
+    width: 100%;
+    height: 300px;
+  }
+  .memo_btn{
+    display: flex;
+  }
+  .btn{
+    margin: 0 15px 0 0;
+
+  }
+}
