--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
             <li class="nav-item"><%= link_to "Library", favorites_path, class: "nav-link" %></li>
             <%= search_form_for @q, url: search_path do |f| %>
               <form class="form-inline">
-                <%= f.search_field :title_or_overview_or_user_name_or_taxons_name_or_comments_content_or_memos_memo_cont, placeholder: 'Search' %>
+                <%= f.search_field :title_or_overview_or_user_name_or_taxons_name_or_comments_content_or_memos_memo_cont, placeholder: 'Search', id: "search" %>
               </form>
             <% end %>
             <li class="nav-item"><%= link_to "Upload", new_upload_musicpost_path, class: "nav-link" %></li>
