--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,2 @@
 $("#favorite_form_<%= @musicpost.id %>").html("<%= escape_javascript(render 'musicposts/unfavorite', musicpost: @musicpost) %>");
+$(".favorite_count_<%= @musicpost.id %>").html('<%= @musicpost.favorites.count %>');
