TOPページの並び替え

--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -272,6 +272,12 @@ footer{
     margin-right: 10px;
   }
 }
+#order_select{
+  width: 100px;
+  height: 30px;
+  display: block;
+  margin-left: auto;
+}
 
 /*=== 6.modal ===*/
 .modal-body{
