並び替え後にボタンが動作しない問題の修正

--- a/app/views/shared/_play_pause.html.erb
+++ b/app/views/shared/_play_pause.html.erb
@@ -1,4 +1,4 @@
-<div class="play_pause_button">
+<div class="play_pause_button", id="play_pause_button_<%= musicpost.id %>">
   <div class="select_musicpost_play">
     <i class="fas fa-play-circle"></i>
     <input class="src" type="hidden", value="<%= url_for(musicpost.audio) %>">
