ローディングの表示

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,3 +3,4 @@
   <option value="popular_order" option="selected">人気順</option>
 </select>
 <%= render 'shared/musicposts_index', musicposts: @musicposts, user_page: false %>
+<%= render 'shared/loading' %>
