--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -474,3 +474,28 @@ footer{
 
   }
 }
+
+/*=== 12.Load ===*/
+.now_loading{
+  width: 100%;
+  height: 100%;
+  font-size: 50px;
+  background: rgba(0,0,0,.5);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 100;
+  /* flexboxを使ってローディングアイコンを画面の中央に寄せる */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  &.hide{
+    display: none;
+  }
+}
