--- a/app/assets/stylesheets/css/style.scss
+++ b/app/assets/stylesheets/css/style.scss
@@ -37,6 +37,9 @@ button{
   outline: none;
   padding: 0;
   appearance: none;
+  &:focus{
+    outline: none !important;
+  }
 }
 .btn{
   margin: 15px;
